# gk-userland

./: .gitignore  .gitmodules  DEPENDENCIES.md  README.md  build-atari++.sh  build-base-v4.sh  build-dosbox-staging.sh  build-dosbox-x.sh  build-dosbox.sh  build-gcc.sh  build-libraries-v4-static.sh  build-libraries-v4.sh  build-libraries.sh  build-llvm.sh  build-mednafen-faust.sh  build-mednafen.sh  build-mesa-20.sh  build-mesa-26.sh  build-mesa.sh  build-newlib.sh  build-pcsx.sh  build-tcl.sh  build-toolchain-v4.sh  build-toolchain.sh  build.sh  gkv4vars.sh  gkvars.sh  meson_cross_file.txt  toolchain-gkos.cmake  toolchain-gkosv4-static.cmake  toolchain-gkosv4.cmake  toolchain-m4.cmake  toolchain-m7.cmake  toolchain-m7.cmake.old
Mesa-4.0.3/: CMakeLists.txt  Makefile.DJ  Makefile.in  config.sub  configure  configure.in
Mesa-4.0.3/docs/: COPYRIGHT  DEVINFO  IAFA-PACKAGE  INSTALL  README
Mesa-4.0.3/include/: dmesadxe.h
Mesa-4.0.3/include/GL/: Makefile.in
Mesa-4.0.3/si-glu/: Makefile.in
Mesa-4.0.3/si-glu/include/: gluos.h
Mesa-4.0.3/si-glu/libnurbs/interface/: Makefile.am  Makefile.in  bezierEval.cc  glcurveval.cc  insurfeval.cc
Mesa-4.0.3/si-glu/libnurbs/internals/: Makefile.am  Makefile.in  mapdesc.cc  mesher.cc  patch.cc  sorter.cc
Mesa-4.0.3/si-glu/libnurbs/nurbtess/: Makefile.am  Makefile.in  directedLine.cc  partitionY.cc  polyDBG.cc  polyUtil.h  quicksort.cc  sampleCompBot.cc  sampleCompTop.cc  sampledLine.cc
Mesa-4.0.3/si-glu/libtess/: Makefile.in  memalloc.h  sweep.c  tess.c
Mesa-4.0.3/si-glu/libutil/: Makefile.in  mipmap.c  project.c  quad.c
Mesa-4.0.3/src/: Makefile  Makefile.am  Makefile.in  config.h  depend  mem.c  mem.h  mmath.c  mmath.h  mtypes.h
Mesa-4.0.3/src-glu/: Makefile  Makefile.in
Mesa-4.0.3/src/FX/: Makefile.in
Mesa-4.0.3/src/FX/X86/: Makefile.in
Mesa-4.0.3/src/GGI/: Makefile.in
Mesa-4.0.3/src/GGI/default/: Makefile.in
Mesa-4.0.3/src/GGI/display/: Makefile.in
Mesa-4.0.3/src/GGI/include/ggi/mesa/: Makefile.in
Mesa-4.0.3/src/OSmesa/: Makefile.in  osmesa.c
Mesa-4.0.3/src/SPARC/: Makefile.in
Mesa-4.0.3/src/SVGA/: Makefile.in
Mesa-4.0.3/src/Trace/: Makefile.in
Mesa-4.0.3/src/X/: Makefile.in
Mesa-4.0.3/src/X86/: Makefile.am  Makefile.in  matypes.h  x86_vertex.S
Mesa-4.0.3/src/array_cache/: Makefile  Makefile.am  Makefile.in
Mesa-4.0.3/src/math/: Makefile  Makefile.am  Makefile.in
Mesa-4.0.3/src/swrast/: Makefile  Makefile.in  s_blend.c  s_buffers.c  s_depth.c  s_pb.c  s_span.c  s_texture.c  s_triangle.c
Mesa-4.0.3/src/swrast_setup/: Makefile  Makefile.in  ss_vbtmp.h
Mesa-4.0.3/src/tnl/: Makefile  Makefile.in
Mesa-4.0.3/src/windml/: ugl_api.c  ugl_dd.c  ugl_line.c  ugl_span.c  ugl_tri.c
Mesa-4.0.3/util/: Makefile.in
Mesa-4.0.3/widgets-mesa/include/GL/: MesaDrawingAreaP.h
SDL-1.2-main/: CMakeLists.txt
SDL-1.2-main/include/: SDL_config.h  SDL_config_gk.h  SDL_stdinc.h  SDL_video.h
SDL-1.2-main/src/audio/: SDL_audio.c  SDL_sysaudio.h
SDL-1.2-main/src/audio/gk/: SDL_gkaudio.c
SDL-1.2-main/src/cpuinfo/: SDL_cpuinfo.c
SDL-1.2-main/src/joystick/gk/: SDL_sysjoystick.c
SDL-1.2-main/src/stdlib/: SDL_malloc.c
SDL-1.2-main/src/thread/pthread/: SDL_sysmutex.c  SDL_syssem.c
SDL-1.2-main/src/video/: SDL_sysvideo.h  SDL_video.c
SDL-1.2-main/src/video/gk/: SDL_gkvideo.c
SDL2-2.28.5/: CMakeLists.txt
gk-joycalib/: CMakeLists.txt
gk-joycalib/inc/: joystick_conf.h
gk-joycalib/src/: joystick_conf.cpp  main.cpp
gk-menu/: CMakeLists.txt
gk-menu/inc/: game.h  img.h
gk-menu/src/: game.cpp  img.cpp  load_games.cpp  main.cpp  supervisor.cpp  test.nut
gk-supervisor/: CMakeLists.txt
gk-supervisor/inc/: INIReader.h  customosd_sq.h  dialogbox.h  osd.h  styles.h  supervisor.h  toasts.h  widget.h  wifi_conf.h
gk-supervisor/src/: customosd.cpp  customosd_sq.cpp  dialogbox.cpp  keyboard.cpp  main.cpp  styles.cpp  toasts.cpp  widget.cpp  wifi_conf.cpp
gkgl/: CMakeLists.txt
gkgl/src-gkgl/: gkgl.cpp  gkgl_sdl2.cpp
gloss-gk/: CMakeLists.txt
gloss-gk/inc-gk/: dlfcn.h  endian.h  features.h  gk.h  gkgl.h  link.h  mntent.h  netdb.h  poll.h  semaphore.h  sysexits.h  syslog.h  utime.h  utmpx.h
gloss-gk/inc-gk/arpa/: inet.h
gloss-gk/inc-gk/asm/: ioctl.h
gloss-gk/inc-gk/bits/: dirent.h  endian.h
gloss-gk/inc-gk/machine/: _threads.h
gloss-gk/inc-gk/net/: ethernet.h  if.h  if_arp.h
gloss-gk/inc-gk/netinet/: ether.h  if_ether.h  in.h  ip.h  tcp.h
gloss-gk/inc-gk/sys/: _elf64.h  dirent.h  gk.h  ioccom.h  ioctl.h  mman.h  poll.h  reboot.h  resource.h  signal.h  socket.h  statfs.h  statvfs.h  sysmacros.h  termios.h  uio.h  un.h  utmp.h  utsname.h
gloss-gk/inc-pthread/: errno.h  mqueue.h  pthread.h  sched.h  time.h  utils.h
gloss-gk/src-dl/: dummy.c
gloss-gk/src-gk/: basename.c  blit.c  dir.c  dup.c  exec.c  glob.c  htons.c  lstat.c  pipe.c  socket.c  sysconf.c  username.c  waitpid.c
gloss-gk/src-gloss/: access.cpp  args.cpp  audio.cpp  cache.cpp  chown.cpp  clock.cpp  close.c  close.cpp  cmpxchg.h  crt0.S  crt0v4.S  crypt.cpp  cursor.cpp  deferred.h  dir.cpp  dlfcn.cpp  dmabuf.cpp  dup.cpp  entropy.cpp  env.cpp  event.cpp  execve.c  exit.c  exit.cpp  flock.cpp  fnmatch.c  fork.c  fstat.c  fsync.cpp  ftruncate.cpp  futimes.cpp  get_netdb.cpp  getpid.c  gettimeofday.c  gettimeofday.cpp  gk_syscalls.c  gkgl.cpp  gpu.cpp  inithook.cpp  ioctl.cpp  (+63 more)
gloss-gk/src-pthread/: FreeRTOS_POSIX.h  FreeRTOS_POSIX_clock.c  FreeRTOS_POSIX_internal.h  FreeRTOS_POSIX_mqueue.c  FreeRTOS_POSIX_pthread.c  attr.c  dummy.c  pthread.c
gloss-gk/src-rt/: dummy.c
glu-9.0.3/: CMakeLists.txt
glu-9.0.3/src/libnurbs/interface/: glcurveval.cc
glu-9.0.3/src/libnurbs/internals/: bufpool.h
tools/: CMakeLists.txt
tools/cat/: cat.cpp
tools/cd/: cd.cpp
tools/common/: args.cpp  args.h  shell.h
tools/console/: console.cpp
tools/echo/: echo.cpp
tools/ed/: buffer.cpp  commands.h  ed.cpp  ed.h  edit.cpp  file.cpp  misc.cpp  parser.cpp  parser.h  print.cpp
tools/ls/: ls.cpp
tools/mkdir/: mkdir.cpp
tools/rm/: rm.cpp
tools/shell/: shell.cpp  tokenize.cpp
tools/telnetd/: telnetd.cpp
tools/tftpd/: tftpd.cpp
(+802 files in other folders)
